--- a/openntpd/manual.html
+++ b/openntpd/manual.html
@@ -1,14 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
+<!doctype html>
+<html lang=en>
+<meta charset=utf-8>
+
 <title>OpenNTPD: Документация</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenNTPD Manual Pages">
-<meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 <link rel="canonical" href="http://www.openntpd.org/manual.html">
-</head>
 
 <h2 id=OpenBSD>
 <a href="index.html">
@@ -16,28 +14,27 @@
 Документация
 </h2>
 <hr>
-<p>
 
+<p>
 Web руководства доступны в самой
 <a href="../index.html">OpenBSD</a>.
-Эти руководства относятся к последней версии OpenNTPD.<p>
+Эти руководства относятся к последней версии OpenNTPD.
 
 <ul>
 <li><a href="https://man.openbsd.org/ntpd">ntpd</a>
-     - NTP-демон
+     &mdash; NTP-демон
 <li><a href="https://man.openbsd.org/ntpctl">ntpctl</a>
-     - NTP-клиент
+     &mdash; NTP-клиент
 <li><a href="https://man.openbsd.org/ntpd.conf">ntpd.conf</a>
-     - конфигурационный файл NTP-демона
+     &mdash; конфигурационный файл NTP-демона
 </ul>
 
+<p>
 Протокол NTP, реализованный в OpenNTPD, описан в
 <a href="https://www.ietf.org/rfc/rfc1305.txt">RFC 1305</a> и
-<a href="https://rfc2.ru/5905.rfc/print">RFC 5905</a> (стандарт, описанный в RFC-5905, заменяет предшествующий стандарт RFC-1305).
-<p>
+<a href="https://rfc2.ru/5905.rfc/print">RFC 5905</a>
+(стандарт, описанный в RFC-5905, заменяет предшествующий стандарт RFC-1305).
 
+<p>
 Материал о реализации, а так же другая документация о протоколе
 NTP, доступна на станице <a href="http://www.ntp.org/">ntp.org</a>. 
-
-</body>
-</html>
