[1.11] sync - openbgpd/goals.html

--- a/openbgpd/goals.html
+++ b/openbgpd/goals.html
@@ -1,14 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
+
 <title>OpenBGPD: Цели проекта</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenBGPD Goals">
-<meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 <link rel="canonical" href="http://www.openbgpd.org/goals.html">
-</head>
 
 <h2 id=OpenBSD>
 <a href="index.html">
@@ -19,19 +17,16 @@
 
 <ul>
 <li>Быть максимально безопасной. Писать код как можно внимательней, проводя
-строгие проверки, в особенности, что касается сетевых входных данных, и
-использования операций с буферами. Использовать разграничение привелегий,
-чтобы уменьшить вред от возможных уязвимостей.
+    строгие проверки, в особенности, что касается сетевых входных данных, и
+    использования операций с буферами. Использовать разграничение привелегий,
+    чтобы уменьшить вред от возможных уязвимостей.
 <li>Надежность чрезвычайно важна, поскольку остановка bgpd обычно приводит к потере
-всех маршрутов и, как следствие, недоступность других сетей.
+    всех маршрутов и, как следствие, недоступность других сетей.
 <li>Предоставить бережную реализацию, подходящую и удовлетворяющую большинство
-пользователей. Не пытаться поддерживать все что только можно, но охватить
-основную функциональность.
+    пользователей. Не пытаться поддерживать все что только можно, но охватить
+    основную функциональность.
 <li>Обеспечить мощный и простой для понимания язык конфигурации.
 <li>Быть быстрым и эффективно использовать память. Поскольку bgpd оперирует
-таблицами, состоящими из сотен тысяч записей, эта часть должна проектироваться
-внимательно, принимая во внимание требования по использованию памяти.
+    таблицами, состоящими из сотен тысяч записей, эта часть должна проектироваться
+    внимательно, принимая во внимание требования по использованию памяти.
 </ul>
-
-</body>
-</html>
