[1.396] sync - openbgpd/ftp.html

--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -1,28 +1,22 @@
 <!-- DO NOT EDIT MANUALLY! See comments in www/build/mirrors.dat for details -->
 
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
+<!doctype html>
+<html lang=en>
+<meta charset=utf-8>
+
 <title>OpenBGPD: Mirrors</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta name="description" content="OpenBGPD for OpenBSD">
-<meta name="copyright" content="This document copyright 2000-2017 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 <link rel="canonical" href="http://www.openbgpd.org/ftp.html">
-<style type="text/css">
-  h3 { color: #0000e0; }
-</style>
-</head>
 
-<body bgcolor="#ffffff" text="#000000" link="#23238E">
-
-<h2>
+<h2 id=OpenBSD>
 <a href="index.html">
-<font color="#0000ff"><i>Open</i></font><font color="#000084">BGPD</font></a>
-<font color="#e00000">Mirrors</font>
+<i>Open</i><b>BGPD</b></a>
+Mirrors
 </h2>
 <hr>
+
 <p>
 OpenBGPD 6.5p0 portable: released May 1, 2019
 
@@ -53,7 +47,6 @@ ones are tested regularly by the developer.
 Reports (success or otherwise) are welcome.
 You may report bugs or submit pull requests at the 
 <a href="https://github.com/openbgpd-portable">GitHub project</a>.
-<p>
 
 <h3>Signing</h3>
 
@@ -67,7 +60,7 @@ public key:
 They are co-signed with GPG using this <a href="https://ftp.openbsd.org/pub/OpenBSD/OpenBGPD/openbgpd.asc">public key</a>.
 
 <p>
-Release signatures can be verified using the signify program from within the OpenBSD operating system itself, using the <a href="https://github.com/aperezdc/signify">portable version of signify</a>, which is available with recent <a href="https://packages.debian.org/search?keywords=signify-openbsd">Debian</a>, <a href="http://packages.ubuntu.com/search?keywords=signify-openbsd">Ubuntu</a> and <a href="https://aur.archlinux.org/packages/signify/">Arch Linux</a></li> releases, or by using GPG.
+Release signatures can be verified using the signify program from within the OpenBSD operating system itself, using the <a href="https://github.com/aperezdc/signify">portable version of signify</a>, which is available with recent <a href="https://packages.debian.org/search?keywords=signify-openbsd">Debian</a>, <a href="http://packages.ubuntu.com/search?keywords=signify-openbsd">Ubuntu</a> and <a href="https://aur.archlinux.org/packages/signify/">Arch Linux</a> releases, or by using GPG.
 
 <h2>Download</h2>
 <hr>
@@ -80,11 +73,11 @@ Release signatures can be verified using the signify program from within the Ope
 <li><a href="#rsync">RSYNC mirrors</a>
 </ul>
 
-<p><hr>
+<hr>
 <h3 id="http">HTTP</h3>
-<p>This is a list of currently known HTTP/HTTPS servers &amp; mirrors:</p>
+<p>This is a list of currently known HTTP/HTTPS servers &amp; mirrors:
 
-<p><table>
+<table>
 <tr>
 	<td>
 	<strong>Fastly (CDN)</strong>
@@ -126,6 +119,13 @@ Release signatures can be verified using the signify program from within the Ope
 	</td><td>
 	<a href="https://openbsd.c3sl.ufpr.br/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz" rel="nofollow">
 	https://openbsd.c3sl.ufpr.br/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz</a>
+	</td>
+    </tr><tr>
+	<td>
+	<strong>Bulgaria (Sofia)</strong>
+	</td><td>
+	<a href="https://openbsd.ipacct.com/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz" rel="nofollow">
+	https://openbsd.ipacct.com/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz</a>
 	</td>
     </tr><tr>
 	<td>
@@ -360,6 +360,13 @@ Release signatures can be verified using the signify program from within the Ope
 	</td>
     </tr><tr>
 	<td>
+	<strong>Switzerland (Linthal, GL)</strong>
+	</td><td>
+	<a href="https://mirror.ungleich.ch/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz" rel="nofollow">
+	https://mirror.ungleich.ch/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz</a>
+	</td>
+    </tr><tr>
+	<td>
 	<strong>Taiwan (Taoyuan)</strong>
 	</td><td>
 	<a href="https://ftp.yzu.edu.tw/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz" rel="nofollow">
@@ -439,6 +446,13 @@ Release signatures can be verified using the signify program from within the Ope
 <tr><td colspan=2><br></td></tr>
     <tr>
 	<td>
+	<strong>Australia (Adelaide)</strong>
+	</td><td>
+	<a href="http://mirror.internode.on.net/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz" rel="nofollow">
+	http://mirror.internode.on.net/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz</a>
+	</td>
+    </tr><tr>
+	<td>
 	<strong>Brazil (Brasilia)</strong>
 	</td><td>
 	<a href="http://mirrors.unb.br/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz" rel="nofollow">
@@ -481,7 +495,7 @@ Release signatures can be verified using the signify program from within the Ope
 	</td>
     </tr><tr>
 	<td>
-	<strong>Phillipines (Cebu)</strong>
+	<strong>Philippines (Cebu)</strong>
 	</td><td>
 	<a href="http://mirror.rise.ph/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz" rel="nofollow">
 	http://mirror.rise.ph/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz</a>
@@ -529,14 +543,24 @@ Release signatures can be verified using the signify program from within the Ope
 	http://openbsd.mirrors.pair.com/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz</a>
 	</td>
     </tr>
-</table></p>
+</table>
 
 <hr>
-<h3 id="ftp">FTP</h3>
-<p>This is a list of currently known FTP mirrors:</p>
 
-<p><table>
+<h3 id="ftp">FTP</h3>
+
+<p>
+This is a list of currently known FTP mirrors:
+
+<table>
     <tr>
+	<td>
+	<strong>Australia (Adelaide)</strong>
+	</td><td>
+	<a href="ftp://mirror.internode.on.net/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz" rel="nofollow">
+	ftp://mirror.internode.on.net/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz</a>
+	</td>
+    </tr><tr>
 	<td>
 	<strong>Austria (Vienna)</strong>
 	</td><td>
@@ -556,6 +580,13 @@ Release signatures can be verified using the signify program from within the Ope
 	</td><td>
 	<a href="ftp://mirrors.unb.br/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz" rel="nofollow">
 	ftp://mirrors.unb.br/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz</a>
+	</td>
+    </tr><tr>
+	<td>
+	<strong>Bulgaria (Sofia)</strong>
+	</td><td>
+	<a href="ftp://openbsd.ipacct.com/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz" rel="nofollow">
+	ftp://openbsd.ipacct.com/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz</a>
 	</td>
     </tr><tr>
 	<td>
@@ -713,7 +744,7 @@ Release signatures can be verified using the signify program from within the Ope
 	</td>
     </tr><tr>
 	<td>
-	<strong>Phillipines (Cebu)</strong>
+	<strong>Philippines (Cebu)</strong>
 	</td><td>
 	<a href="ftp://mirror.rise.ph/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz" rel="nofollow">
 	ftp://mirror.rise.ph/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz</a>
@@ -838,18 +869,27 @@ Release signatures can be verified using the signify program from within the Ope
 	ftp://mirror.esc7.net/pub/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz</a>
 	</td>
     </tr>
-</table></p>
+</table>
 
 <hr>
-<h3 id="rsync">rsync</h3>
-<p>This is a list of currently known rsync mirrors:</p>
 
-<p><table>
+<h3 id="rsync">rsync</h3>
+
+<p>
+This is a list of currently known rsync mirrors:
+
+<table>
     <tr>
 	<td>
 	<strong>LeaseWeb (CDN)</strong>
 	</td><td>
 	rsync://mirror.leaseweb.com/openbsd/OpenBGPD/openbgpd-6.5p0.tar.gz
+	</td>
+    </tr><tr>
+	<td>
+	<strong>Australia (Adelaide)</strong>
+	</td><td>
+	rsync://mirror.internode.on.net/openbsd/OpenBGPD/openbgpd-6.5p0.tar.gz
 	</td>
     </tr><tr>
 	<td>
@@ -862,6 +902,12 @@ Release signatures can be verified using the signify program from within the Ope
 	<strong>Brazil (Curitiba)</strong>
 	</td><td>
 	rsync://openbsd.c3sl.ufpr.br/openbsd/OpenBGPD/openbgpd-6.5p0.tar.gz
+	</td>
+    </tr><tr>
+	<td>
+	<strong>Bulgaria (Sofia)</strong>
+	</td><td>
+	rsync://openbsd.ipacct.com/OpenBSD/OpenBGPD/openbgpd-6.5p0.tar.gz
 	</td>
     </tr><tr>
 	<td>
@@ -1074,6 +1120,4 @@ Release signatures can be verified using the signify program from within the Ope
 	rsync://mirror.esc7.net/openbsd/OpenBGPD/openbgpd-6.5p0.tar.gz
 	</td>
     </tr>
-</table></p>
-</body>
-</html>
+</table>
