--- a/openbgpd/mail.html
+++ b/openbgpd/mail.html
@@ -1,13 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
+
 <title>OpenBGPD: Почтовые рассылки</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenBGPD Mailing lists">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 <link rel="canonical" href="https://www.openbgpd.org/mail.html">
-</head>
 
 <h2 id=OpenBSD>
 <a href="index.html">
@@ -18,6 +17,7 @@
 
 <h2>Основная рассылка пользователей OpenBGPD</h2>
 
+<p>
 Основная рассылка для обсуждений, вопросов, идей и предложений это 
 <a href="mailto:users@openbgpd.org">users@openbgpd.org</a>.
 
@@ -38,7 +38,3 @@
 <p>
 Больше информации по этой теме можно найти на <a href="https://www.openbsd.org/mail.html">
 OpenBSD mailing list page</a>.
-
-<p>
-</body>
-</html>
