[1.17] sync - openbgpd/manual.html

--- a/openbgpd/manual.html
+++ b/openbgpd/manual.html
@@ -1,14 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
+
 <title>OpenBGPD: Документация</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenBGPD Manual Pages">
-<meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 <link rel="canonical" href="http://www.openbgpd.org/manual.html">
-</head>
 
 <h2 id=OpenBSD>
 <a href="index.html">
@@ -16,23 +14,21 @@
 Документация
 </h2>
 <hr>
-<p>
 
+<p>
 Web руководства доступны в самой
 <a href="../index.html">OpenBSD</a>.
-Эти руководства относятся к последней версии OpenBGPD.<p>
+Эти руководства относятся к последней версии OpenBGPD.
 
 <ul>
  <li><a href="https://man.openbsd.org/bgpd">bgpd</a>
-      - Border Gateway Protocol демон
+      &mdash; BGP (Border Gateway Protocol) демон
  <li><a href="https://man.openbsd.org/bgpd.conf">bgpd.conf</a>
-      - Border Gateway Protocol конфигурационный файл демона
+      &mdash; конфигурационный файл демона BGP (Border Gateway Protocol)
  <li><a href="https://man.openbsd.org/bgpctl">bgpctl</a>
-      - клиент для управления Border Gateway Protocol демоном
+      &mdash; клиент для управления BGP (Border Gateway Protocol) демоном
 </ul>
 
+<p>
 Протокол BGP, реализованный в OpenBGPD, описан в
 <a href="https://rfc2.ru/4271.rfc/print">RFC 4271</a>.
-
-</body>
-</html>
