--- a/openbgpd/papers.html
+++ b/openbgpd/papers.html
@@ -1,14 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
+
 <title>OpenBGPD: Доклады и презентацииs</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenBGPD related papers and presentations">
-<meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 <link rel="canonical" href="http://www.openbgpd.org/papers.html">
-</head>
 
 <h2 id=OpenBSD>
 <a href="index.html">
@@ -19,123 +17,122 @@
 
 <h3>Доклад на EuroIX 34</h3>
 <blockquote>
-<font color="#009000"><strong>
+<strong>
 <a href="https://www.openbsd.org/papers/OpenBGPD-EuroIX34.pdf">OpenBGPD, Adding Diversity to Route Server Landscape</a>
 Claudio Jeker
-</strong></font><br>
+</strong><br>
 </blockquote>
 
 <h3>Доклад на DENOG 10</h3>
 <blockquote>
-<font color="#009000"><strong>
+<strong>
 <a href="https://www.openbsd.org/papers/OpenBGPD_gotta_go_fast-DENOG10.pdf">OpenBGPD, gotta go fast!</a>
-Claudio Jeker
-</strong></font><br>
+by Claudio Jeker
+</strong><br>
 </blockquote>
 
 <h3>Доклад на SWINOG #34</h3>
 <blockquote>
-<font color="#009000"><strong>
+<strong>
 <a href="https://www.openbsd.org/papers/OpenBGPD_gotta_go_fast-SwiNOG34.pdf">OpenBGPD, gotta go fast!</a>
-Claudio Jeker
-</strong></font><br>
+by Claudio Jeker
+</strong><br>
 </blockquote>
 
 <h3>Доклад на NetNOD Tech Meeting 2018</h3>
 <blockquote>
-<font color="#009000"><strong>
+<strong>
 <a href="https://www.openbsd.org/papers/OpenBGPD_gotta_go_fast-netnod2018.pdf">OpenBGPD, gotta go fast!</a>
-Claudio Jeker
-</strong></font><br>
+by Claudio Jeker
+</strong><br>
 </blockquote>
 
 <h3>Доклад на RIPE 71</h3>
 <blockquote>
-<font color="#009000"><strong>
+<strong>
 <a href="https://www.openbsd.org/papers/2015_ripe71_openbsd.pdf">Current Status of OpenBSD / OpenBGPd</a>
-Peter Hessler
-</strong></font><br>
+by Peter Hessler
+</strong><br>
 </blockquote>
 
 <h3>Доклад на BSDCan 2014</h3>
 <blockquote>
-<font color="#009000"><strong>
-<a href="http://bulabula.org/papers/2014/asiabsdcon/">OpenBGPD turns 10 years - Design, Implementation, Lessons learned</a>
-Henning Brauer
-</strong></font><br>
+<strong>
+<a href="https://quigon.bsws.de/papers/2014/asiabsdcon/">OpenBGPD turns 10 years &mdash; Design, Implementation, Lessons learned</a>
+by Henning Brauer
+</strong><br>
 </blockquote>
 
 <h3>Доклад на AsiaBSDCon 2009</h3>
 <blockquote>
-<font color="#009000"><strong>
+<strong>
 <a href="https://www.openbsd.org/papers/asiabsdcon2009-bgpd/">
-OpenBGPD - bringing full views to OpenBSD since 2004</a>
-Claudio Jeker
-</strong></font><br>
+OpenBGPD &mdash; bringing full views to OpenBSD since 2004</a>
+by Claudio Jeker
+</strong><br>
 </blockquote>
 
 <h3>Доклад на LinuxTag May, 2006</h3>
 <blockquote>
-<font color="#009000"><strong>
+<strong>
 <a href="https://www.openbsd.org/papers/linuxtag06-network/index.html">
 Routing with OpenBSD using OpenOSPFD and OpenBGPD</a>
-Claudio Jeker
-</strong></font><br>
+by Claudio Jeker
+</strong><br>
 </blockquote>
 
 <h3>Доклад на 21C3</h3>
 <blockquote>
-<font color="#009000"><strong>
-<a href="http://bulabula.org/papers/21c3/">OpenBGPD и OpenNTPD</a>,
-Henning Brauer</strong></font><br>
+<strong>
+<a href="https://quigon.bsws.de/papers/21c3/">OpenBGPD и OpenNTPD</a>,
+by Henning Brauer
+</strong><br>
 Доклад о 
-<a href="http://www.openbsd.org/cgi-bin/man.cgi?query=bgpd&amp;apropos=0&amp;sektion=0&amp;manpath=OpenBSD+Current&amp;arch=i386&amp;format=html">BGPD</a>,
+<a href="https://man.openbsd.org/bgpd.8">BGPD</a>
 который был прочитан на
-<a href="http://www.ccc.de/congress/2004/">21. Chaos Communication Congress</a>
+<a href="https://events.ccc.de/congress/2004/">21. Chaos Communication Congress</a>
 в Берлине (Германия), в декабре 2004 года.
 На слайдах представлены проекты OpenBGPD и OpenNTPD.
 </blockquote>
 
 <h3>Доклад на EuroBSDCon 2004</h3>
 <blockquote>
-<font color="#009000"><strong>
-<a href="http://bulabula.org/papers/euroBSDCon2004/">A Secure BGP Implementation</a>,
-Henning Brauer
-</strong></font><br>
+<strong>
+<a href="https://quigon.bsws.de/papers/euroBSDCon2004/">A Secure BGP Implementation</a>,
+by Henning Brauer
+</strong><br>
 Доклад о
-<a href="http://www.openbsd.org/cgi-bin/man.cgi?query=bgpd&amp;apropos=0&amp;sektion=0&amp;manpath=OpenBSD+Current&amp;arch=i386&amp;format=html">BGPD</a>,
+<a href="https://man.openbsd.org/bgpd.8">BGPD</a>,
 который был прочитан на
-<a href="http://www.eurobsdcon.org/">EuroBSDCon 2004</a>
+<a href="https://2004.eurobsdcon.org/">EuroBSDCon 2004</a>
 в Карлсруэ (Германия), в октябре 2004 года.
 В общих чертах описываются детали реализации BGPD.
 </blockquote>
 
 <h3>Доклад на SUCON 04</h3>
 <blockquote>
-<font color="#009000"><strong>
+<strong>
 <a href="http://www.openbsd.org/papers/bgpd_sucon04/index.html">A Secure BGP Implementation</a>,
-Henning Brauer
-</strong></font><br>
+by Henning Brauer
+</strong><br>
 Доклад о
-<a href="http://www.openbsd.org/cgi-bin/man.cgi?query=bgpd&amp;apropos=0&amp;sektion=0&amp;manpath=OpenBSD+Current&amp;arch=i386&amp;format=html">BGPD</a>,
+<a href="https://man.openbsd.org/bgpd.8">BGPD</a>,
 который был прочитан на
-<a href="http://www.suug.ch/sucon/04/">SUCON 04</a> в Цюрихе (Швейцария), в сентябре 2004 года.
+<a href="https://web.archive.org/web/20040812043217/http://www.suug.ch/sucon/04/">SUCON 04</a>
+в Цюрихе (Швейцария), в сентябре 2004 года.
 В общих чертах описывается детали реализации BGPD.
 <a href="http://www.openbsd.org/papers/bgpd_sucon04.tgz">Тарбол</a> со слайдами для просмотра в оффлайн.
 </blockquote>
 
 <h3>Доклад на FOSDEM 04</h3>
 <blockquote>
-<font color="#009000"><strong>
-<a href="http://bulabula.org/papers/fosdem2004/">Implementing BGP in OpenBSD</a>,
-Henning Brauer
-</strong></font><br>
+<strong>
+<a href="https://quigon.bsws.de/papers/fosdem2004/">Implementing BGP in OpenBSD</a>,
+by Henning Brauer
+</strong><br>
 Доклад о
-<a href="http://www.openbsd.org/cgi-bin/man.cgi?query=bgpd&amp;apropos=0&amp;sektion=0&amp;manpath=OpenBSD+Current&amp;arch=i386&amp;format=html">BGPD</a>,
+<a href="https://man.openbsd.org/bgpd.8">BGPD</a>,
 который был прочитан на
-<a href="http://www.fosdem.org/">FOSDEM 2004</a> в Брюсcеле (Бельгия), в феврале 2004 года.
+<a href="https://archive.fosdem.org/2004/">FOSDEM 2004</a> в Брюсcеле (Бельгия), в феврале 2004 года.
 Рассказывается о процессе написания bgpd.
 </blockquote>
-
-</body>
-</html>
