--- a/openbgpd/users.html
+++ b/openbgpd/users.html
@@ -1,15 +1,19 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
+
 <title>OpenBGPD: Отзывы</title>
 <meta name="robots" content="nofollow">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenBGPD Testimonials">
-<meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 <link rel="canonical" href="http://www.openbgpd.org/users.html">
-</head>
+
+<style>
+blockquote {
+	font-style: italic;
+}
+</style>
 
 <h2 id=OpenBSD>
 <a href="index.html">
@@ -17,55 +21,59 @@
 Отзывы
 </h2>
 <hr>
-<p>
 
+<p>
 Если вы хотите, чтобы мы добавили информацию о вас на эту старницу,
 отправьте email на <a href="mailto:press@openbsd.org">press@openbsd.org</a>.
 <p>
-<i><b>Примечание:</b> в целях конфиденциальности, если компании этого попросят,
-мы можем не указывать их имена или имена их клиентов. В этом случае мы их называем
-"неизвестная компания".</i>
-<p>
+<i><strong>Примечание:</strong>
+в целях конфиденциальности, если компании этого попросят,
+мы можем не указывать их имена или имена их клиентов. В этом случае мы их
+называем "неизвестная компания" ("Undisclosed Company").</i>
 <hr>
 
 <ul>
-<li><a href="http://www.ams-ix.net/">AMS-IX, Нидерланды</a><br>
+<li><a href="https://www.ams-ix.net/ams">AMS-IX, Нидерланды</a><br>
 Amsterdam Internet Exchange, или AMS-IX, является одним из крупнейших
-интернет-бирж в мире. Elisa Jasinska пишет:<br>
-<i>"AMS-IX deployed two OpenBGPD route servers end of 2009. Each is currently
+интернет-бирж в мире. Elisa Jasinska пишет:
+<blockquote>
+<p>"AMS-IX deployed two OpenBGPD route servers end of 2009. Each is currently
 running with over 350 route server client sessions, altogether announcing 
 over 38000 prefixes. The support we got from the developers over the past 
 year has been amazing, every bug or issue found has been fixed as soon as 
 possible and features have been added for us. Thanks and keep up
-the good work!"</i>
-<p>
+the good work!"
+</blockquote>
 
-<li><a href="http://www.dma.nl/">DMA computer service, Нидерланды</a><br>
-DMA является интернет-провайдером в Нидерландах. Shaun O'Neil пишет:<br>
-<i>"Our customers expect us to maintain a high degree of performance,
+<li><a href="https://www.dma.nl/">DMA computer service, Нидерланды</a><br>
+DMA является интернет-провайдером в Нидерландах. Shaun O'Neil пишет:
+<blockquote>
+"Our customers expect us to maintain a high degree of performance,
 security and control on our systems and network. At the same time we must
 remain cost effective. The OpenBSD bgpd allows us to do exactly that,
 and it forms a mission critical component of our business.
-The skill and dedication we've seen from it's developers is unparalleled."</i>
-<p>
+The skill and dedication we've seen from it's developers is unparalleled."
+</blockquote>
 
-<li><a href="http://www.netfonds.no/">Net Fonds, Норвегия</a><br>
-Net Fonds - норвежский интернет-брокер. Arvid Gr&oslash;tting пишет:<br>
-<i>"I first switched two of our routers from Zebra to OpenBGPD after
+<li><a href="https://www.netfonds.no/">Net Fonds, Норвегия</a><br>
+Net Fonds - норвежский интернет-брокер. Arvid Gr&oslash;tting пишет:
+<blockquote>
+<p>"I first switched two of our routers from Zebra to OpenBGPD after
 finding a problem we suspected was in Zebra.  As it turned out, the
 problem itself was deep inside OpenBSD, solved in the then-current
 kernel, but once I'd made the switch I liked what I saw and we've
-stuck with OpenBGPD.<br>
-I've found some bugs, but unlike in some other projects they were
+stuck with OpenBGPD.
+<p>I've found some bugs, but unlike in some other projects they were
 resolved rather quickly in spite of being difficult to reproduce, and
-OpenBGPD seems quite stable now.  Thanks, guys!"</i>
-<p>
+OpenBGPD seems quite stable now.  Thanks, guys!"
+</blockquote>
 
-<li><a href="http://www.ipplus.ca/">IP Plus Wireless Corp, Канада</a><br>
-IP Plus Wireless -  это небольшой поставщик лицензионных Mikrowellen-Backboune
+<li>IP Plus Wireless Corp, Канада<br>
+IP Plus Wireless -  небольшой поставщик лицензионных Mikrowellen-Backboune
 в южной Альберте, Канада, с более чем 1000 установленных устройств.
 VP Bob Kitella пишет:
-<i>"We have been using OpenBSD for all of our routing, bridging, internet
+<blockquote>
+<p>"We have been using OpenBSD for all of our routing, bridging, internet
 servers, firewalls, VPN, etc. since we started the company.
 Our growth had forced us to install a second fiber connection and
 implement BGP.  We have been running bgpd on OpenBSD since August 2004,
@@ -76,18 +84,20 @@ We are very impressed with the work that the OpenBSD project does, and
 we appreciate the quality, stability, functionality and security that
 the operating system provides for us, but more important, we are
 grateful and appreciate the hard work and dedication of the team. Thank
-you OpenBSD."</i>
-<p>
+you OpenBSD."
+</blockquote>
 
-<li>Неизвестная компания<br>
-<i>"The first thing I said was let's use Junipers, but
-after seeing bgpd in action on a test machine I was hooked."</i>
-<p>
+<li>Неизвестная компания
+<blockquote>
+<p>"The first thing I said was let's use Junipers, but after seeing
+bgpd in action on a test machine I was hooked."
+</blockquote>
 
-<li><a href="http://www.city-net.com/">CityNet, США</a><br>
+<li>CityNet, США<br>
 CityNet является небольшим интернет-провайдером в Питцбурге, США.
 Douglas Davidson пишет:
-<i>"We were in the situation where we needed to upgrade from a Cisco 3600
+<blockquote>
+<p>"We were in the situation where we needed to upgrade from a Cisco 3600
 due to the expanding bgp routing table and a seriously lacking cpu.  To
 do what we needed to do would have required a Juniper or a high end
 Cisco.  Instead we tried OpenBSD with OpenBGPD and pf on a low end
@@ -99,21 +109,25 @@ tcpdump.  In short, it's the best hardware, software decision we ever
 made and it has literally changed the services we can offer.  I very
 much prefer OpenBSD, OpenBGPD, and pf to any other solution.  It
 actually brought tears to my eyes during our first few days of use.
-It's that good."</i>
-<p>
+It's that good."
+</blockquote>
 
-<li><a href="http://www.ntt.net/">NTT Communications Global IP Network, Япония</a><br>
+<li><a href="https://www.ntt.com/business/services/network/global-ip-network/gin.html">
+NTT Communications Global IP Network, Япония</a>
 NTT - глобальный IP-carrier в Токио, Япония. Джозеф Биртисель пишет:
-<i>"Why tax a router with gathering statistical or operational data when
+<blockquote>
+<p>"Why tax a router with gathering statistical or operational data when
 OpenBGPD can do it natively quickly and efficiently? OpenBGPD fulfills
 the OpenBSD promise of providing reliability and security over flashy
 buttons and knobs. I look with great interest at this project and have
-high hopes for its continued success."</i>
+high hopes for its continued success."
 <p>
+</blockquote>
 
-<li><a href="http://www.calyx.nl/">Calyx Internet, Нидерланды</a><br>
+<li>Calyx Internet, Нидерланды<br>
 Calyx является full-service ISP в Нидерландах. Alexander Grendel пишет:
-<i>"I just wanted to tell  that I am a very happy user of
+<blockquote>
+<p>"I just wanted to tell  that I am a very happy user of
 OpenBGPD (and OpenBSD for years). We started out with zebra on OpenBSD
 2.8 or 2.9 and OpenBGPD since 3.8. Now we run OpenBSD 3.9 (since
 yesterday) with OpenBGPD. Everything even remotely important
@@ -122,22 +136,23 @@ soekris/openbsd routers etc etc. We are moving to a new server room at
 one of the facilities that host the AMS-IX (and NL-IX) exchanges and I
 will set up redundant CARP/BGP (maybe OSPF) for our network there. We
 have around 160 peers and three transit providers and my life is sooo
-much easier than it was with zebra! Thanks dude!"</i>
-<p>
+much easier than it was with zebra! Thanks dude!"
+</blockquote>
 
-<li><a href="http://www.virtua.ch/">Virtua SA, Швейцария</a><br>
+<li><a href="https://www.virtua.ch/">Virtua SA, Швейцария</a><br>
 Virtua SA - швейцарская компания, занимающаяся Web-разработкой
 и сетевым консальтингом. Marcel Prisi пишет:
-<i>"We just set up a local AS using OpenBSD/flashdist/OpenBGPd and the
+<blockquote>
+<p>"We just set up a local AS using OpenBSD/flashdist/OpenBGPd and the
 experience was really great, simple "plug and play". The remote cisco &
 juniper stuff never complained and everything has been working
-flawlessly since then. Thumbs up to the OpenBSD / OpenBGPd people !"</i>
-<p>
+flawlessly since then. Thumbs up to the OpenBSD / OpenBGPd people !"
+</blockquote>
 
-<li><a href="http://www.wdg.com.au/">Web Development Group,
-Австралия</a><br>
+<li>Web Development Group, Австралия<br>
 Web Development Group предлагает полный спектр услуг по обслуживанию
-Web-проектов. Вот что пишет Karl Kopp:<i>
+Web-проектов. Вот что пишет Karl Kopp:
+<blockquote>
 "As a 'full service offering' company, every aspect of our business is
 critical. Hence using Cisco routers was a simple choice 5 years ago when
 we started offering enterprise hosting. But as our clients needs
@@ -149,34 +164,35 @@ for over 7 years, I was familiar with it, so decided to give OpenBGPd a
 try and WOW, its impressive. Replacing our core router was SIMPLE, and
 it just worked! For the cost of just the Cisco RAM upgrade and one year
 support, we have a complete OpenBSD / OpenBGP based BGP infrastructure."
-</i>
-<p>
+</blockquote>
 
-<li><a href="http://www.inn.no/">INN AS, Норвегия</a><br>
-Это небольшая ISP и медиа-компания. Pete Vickers пишет:<i>
+<li>INN AS, Норвегия<br>
+Это небольшая ISP и медиа-компания. Pete Vickers пишет:
+<blockquote>
+<p>
 "We mainly provide web-, image- and media- services for other
 designers and publishers. We were unhappy with our old Cisco router
 that was ineffective and biased traffic incorrectly over transit
 lines. It didn't support a full BGP table and crashed if we added too
 many peers. Now we run OpenBGP, with full tables and peering with
 approx 40 peers (at NIX), and traffic runs much smoother."
-</i>
-<p>
+</blockquote>
 
-<li><a href="http://www.ondarpc.com.br/">OndaRPC, Бразилия</a><br>
-является одним из крупнейших провайдеров в Бразилии, предлагающих услуги хостинга,
-критически важных услуг, WWW, FTP, e-mail и других служб Интернета.
-Anderson Nadal пишет:<i>
-"We are currently using OpenBGPD in a High Availability Routing
+<li><a href="https://www.onda.com.br">OndaRPC, Бразилия</a><br>
+является одним из крупнейших провайдеров в Бразилии, предлагающих услуги
+хостинга, критически важных услуг, WWW, FTP, e-mail и других служб Интернета.
+Anderson Nadal пишет:
+<blockquote>
+<p>"We are currently using OpenBGPD in a High Availability Routing
 Solution in our backbone.
 We have changed from Cisco to Linux+Zebra and now to OpenBGP and we
 are very satisfied."
-</i>
-<p>
+</blockquote>
 
-<li><a href="http://www.ifom-ieo-campus.it/">INFOM-IEO Campus, Италия</a><br>
-Итальянский научно-исследовательский институт. Andrea Cocito пишет:<i>
-"We handle a "small" academic network whose connectivity relies on
+<li><a href="https://www.ifom-ieo-campus.it/">INFOM-IEO Campus, Италия</a><br>
+Итальянский научно-исследовательский институт. Andrea Cocito пишет:
+<blockquote>
+<p>"We handle a "small" academic network whose connectivity relies on
 about 150mbit of bandwith carried over 3 BGP peerings feeding us the
 full routing table. We serve a cluster of cancer research
 institutions which live mostly with public donations and research
@@ -185,8 +201,7 @@ The "routers" for this are two entry-level Sun/amd64 boxes costed
 less than 1000 euro each which run FreeBSD and carp/OpenBGPD. We
 never saw the load on the machines and/or memory grow beyond 5% on
 the main router (the other just sits there waiting).
-
-We are incredibly happy of the performance, stability and simplicity
+<p>We are incredibly happy of the performance, stability and simplicity
 of OpenBGPD and we really thank you for this piece of software which
 saved us tens of thousands of euros that have been thus used for
 research activities and otherwise would have gone in the pocket of
@@ -194,43 +209,41 @@ some big company now. The only time we had a configuration problem we
 wrote to the OpenBSD mailing list and got an answer with the solution
 38 minutes later, that "big company" support team should learn
 something."
-</i>
-<p>
+</blockquote>
 
-<li><a href="http://www.pl-ix.pl/">PL-IX (PoLish Internet eXchange), Польша</a><br>
+<li><a href="https://ix.equinix.com/home/">PL-IX (PoLish Internet eXchange), Польша</a><br>
 является крупнейшим IX в Польше, расположенным в нескольких городах с центром
 в Варшаве. Sylwester S. Biernacki пишет:
-<i>"
-  In every city we have 2 OpenBGPD route-servers with fullytransparent
+<blockquote>
+<p>"In every city we have 2 OpenBGPD route-servers with fullytransparent
   services - local pl-ix (peering between companies in one city)
   and global pl-ix (peering with every company in PL-IX). BGP sessions
   are made between member and PL-IX route-servers.
-
+<p>
   Our transit router (transits traffic from/to other Polish IX -
   WIX), also based on OpenBGPD, serves 300Mbps in + 300Mbps out traffic
   with ~100kpackets/s in and ~100kpackets/s and full bgp sessions,
   and since we started it we forgot about that box - it just works.
-
+<p>
   OpenBGPD has given us very stable and reliable platform for PL-IX
   members. During PL-IX startup help of OpenBGPD developers was
   extremely useful, and what is the most important, response times for
   our problems were amazing. Big companies with well-payed-support
   should learn from you."
-</i>
-<p>
+</blockquote>
 
-<li><a href="http://www.altijdsoftwareparaat.nl/">ASPect, Нидерланды</a><br>
-является голландской ASP- и хостинг-компанией.
-Frans Haarman пишет:
-<i>
-"From the start we relied on OpenBPGD. It has proven itself as very stable, no
-incidents whatsoever. Big compliments to Mr. Brauer!"
-</i>
+<li>ASPect, Нидерланды<br>
+является голландской ASP- и хостинг-компанией. Frans Haarman пишет:
+<blockquote>
 <p>
+"From the start we relied on OpenBPGD. It has proven itself as very
+stable, no incidents whatsoever. Big compliments to Mr. Brauer!"
+</blockquote>
 
-<li><a href="http://www.redrivernet.com/">Red River Communications, Lake Havasu City, Аризона, США</a><br>
+<li>Red River Communications, Lake Havasu City, Аризона, США<br>
 небольшая ISP/WISP. Andrew Fresh пишет:
-<i>
+<blockquote>
+<p>
 "We have been using OpenBGP since shortly before OpenBSD 3.9 was
 released.  We were upgrading our Internet connections and our existing
 Cisco router was already struggling.   We were looking at having to buy
@@ -240,26 +253,25 @@ less cost and better redundancy than the Cisco router.  The OpenBSD
 solution has better performance, and as we continue to add bandwidth, we
 should be able to continue using the current servers.  We are running
 three full views and everything Just Works."
-</i>
-<p>
+</blockquote>
 
-<li><a href="http://www.easyspeedy.com/">Easyspeedy, Копенгаген, Дания</a><br>
+<li><a href="https://asergo.com/">Easyspeedy, Копенгаген, Дания</a><br>
 Easyspeedy это бизнес-для-бизнеса хостинг-компания, использующая
-только OSS - как для инфраструктуры, так и для решений на производсте.
+только OSS &mdash; как для инфраструктуры, так и для решений на производсте.
 Per Engelbrecht пишет:
-<i>
-"Our entire BGP setup has been running  FreeBSD/Zebra for a number of years
+<blockquote>
+<p>"Our entire BGP setup has been running  FreeBSD/Zebra for a number of years
 until we made the transition to OpenBGPD approximately 2 years ago [Jan.
 2005]. Besides an immediate performance leap we gained significant production
 advantages with tools like 'bgpctl' and 'pfctl' in our multihomed
 environment. OpenBSD has with it's OpenBGPD, OpenOSPFD and OpenNTPD provided
 us with a rock-solid and truly "One Stop Shopping" BGP solution
 for our ever growing business-to-business hosting company."
-</i>
-<p>
+</blockquote>
 
 <li>Неизвестная компания, Великобритания<br>
-<i>
+<blockquote>
+<p>
 "We are a managed service provider, delivering both front-office SaaS
 and traditional hosting services across the EMEA region. High
 availability is a big deal for us and our clients. As a result, in the
@@ -274,11 +286,12 @@ overhead and vendor lock-in of certain big names, we gave OpenBGPD a go.
 Three years later we are taking a number of full feeds, have seen out
 provider outages and rolling upgrades, all without breaking a sweat or
 disruption to our services. Many thanks to the OpenBSD team."
-<p>
+</blockquote>
 
 <li><a href="https://www.aquilenet.fr/">Aquilenet</a>, является членом
-<a href="https://www.ffdn.org/">FFDN</a>, Франция<br>
-<i>
+<a href="https://www.ffdn.org/">FFDN</a>, Франция
+<blockquote>
+<p>
 Aquilenet является некоммерческой организацией и провайдером типа «сам
 себе провайдер», членом федерации аналогичных провайдеров во Франции
 под названием FFDN. Мы являемся сторонниками сетевой нейтральности,
@@ -290,8 +303,5 @@ Aquilenet является некоммерческой организацией
 Работа сообщества впечатляет, и мы очень рады внести свой вклад в эти
 проекты. Мы призываем всех интернет-провайдеров использовать
 OpenBSD/OpenBGPD. Это очень просто и эффективно!
-</i>
+</blockquote>
 </ul>
-
-</body>
-</html>
