--- a/openssh/users.html
+++ b/openssh/users.html
@@ -1,55 +1,50 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
+
 <title>OpenSSH: Пользователи</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
 <meta name="description" content="the OpenSSH integration page">
-<meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="canonical" href="https://www.openssh.com/users.html">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
-</head>
 
-<body bgcolor="#ffffff" text="#000000" link="#23238E">
-
-<h2>
-<a href="index.html">
-<font color="#0000ff"><i>Open</i></font><font color="#000084">SSH</font></a>
-<font color="#e00000">Пользователи</font>
+<h2 id=OpenBSD>
+<a href="/">
+<i>Open</i><b>SSH</b></a>
+Пользователи
 </h2>
 <hr>
 
 <p>
 Известно, что перечисленные операционные системы и продукты интегрировали
 OpenSSH, как один из базовых компонентов.
+
 <p>
 Список составлен в хронологическом порядке. Cистемы, которые раньше
 интегрировали OpenSSH, перечислены первыми.
-<p>
 
 <ul>
 <li><a href="https://www.openbsd.org/">OpenBSD</a>
-<li><a href="http://www.freebsd.org/">FreeBSD</a>
+<li><a href="https://www.freebsd.org/">FreeBSD</a>
 <li>BSDi BSD/OS
-<li><a href="http://www.netbsd.org/">NetBSD</a>
-<li><a href="http://www.computone.com/">Computone</a>
-<li><a href="http://www.stallion.com.au/">Stallion</a>
-<li><a href="http://www.cygwin.com">Cygwin</a>
-<li><a href="http://www.apple.com/macosx/">Mac OS X Version 10.1 and later</a>
-<li><a href="http://www.hp.com/rnd">HP Procurve Switch 4108GL and 2524/2512</a>
-<li><a href="http://www-128.ibm.com/developerworks/eserver/articles/openssh_aix.html">IBM AIX</a>
-<li><a href="http://www.sun.com/">Sun Solaris 9 and later</a> (named <a href="http://sunsolve.sun.com/search/document.do?assetkey=1-9-50465-1">SunSSH</a>)
-<li><a href="http://www.smoothwall.org">SmoothWall</a>
-<li><a href="http://www.sgi.com/software/irix/releases/irix6521.html">SGI Irix</a>
-<li><a href="http://www.thinlinc.com">ThinLinc</a>
-<li><a href="http://www.nokia.com/">Nokia IPSO</a>
-<li><a href="http://www.cisco.com/en/US/products/hw/contnetw/ps792/index.html">
-Cisco CSS11500 series content services switches</a>
-<li><a href="http://www.cisco.com/en/US/products/hw/ps4159/ps2160/index.html">
+<li><a href="https://www.netbsd.org/">NetBSD</a>
+<li>Computone
+<li><a href="https://www.lantronix.com/">Stallion</a>
+<li><a href="https://www.cygwin.com/">Cygwin</a>
+<li><a href="https://www.apple.com/macos/">Mac OS X Version 10.1 and later</a>
+<li><a href="https://www.hpe.com/us/en/networking/switches.html">HP Procurve Switch 4108GL and 2524/2512</a>
+<li><a href="https://www-01.ibm.com/support/docview.wss?uid=isg1fileset2031326864">IBM AIX</a>
+<li><a href="https://www.oracle.com/sun/">Sun Solaris 9 and later</a> (named <a href="https://docs.oracle.com/cd/E23824_01/html/821-1456/sshuser-6.html">SunSSH</a>)
+<li><a href="http://www.smoothwall.org/">SmoothWall</a>
+<li><a href="https://web.archive.org/web/20060117215707/http://www.sgi.com/products/software/irix/releases/irix6521.html">SGI Irix</a>
+<li><a href="https://www.cendio.com/">ThinLinc</a>
+<li><a href="https://www.nokia.com/">Nokia IPSO</a>
+<li><a href="https://www.cisco.com/c/en/us/obsolete/application-networking-services/cisco-css-11500-series-content-services-switches.html">
+<li><a href="https://www.cisco.com/c/en/us/obsolete/storage-networking/cisco-sn-5400-series-storage-routers.html">
 Cisco SN 5400 series storage routers</a>
-<li><a href="http://www.toplayer.com/content/products/intrusion_detection/ids_balancer.jsp">TopLayer IDS balancers</a>
-<li><a href="http://www.networktechinc.com/srvsw-term-ssh.html">NTI SSH Serial Port Switch</a>
-<li><a href="http://www.bluecoat.com/products/index.html">Bluecoat (formerly Cacheflow) Proxy SG</a>
+<li>TopLayer IDS balancers
+<li><a href="https://www.networktechinc.com/srvsw-term-ssh.html">NTI SSH Serial Port Switch</a>
+<li><a href="https://www.symantec.com/products/proxy-sg-and-advanced-secure-gateway">Bluecoat (formerly Cacheflow) Proxy SG</a>
 <li><a href="http://www.novell.com/documentation/oes2/oes_implement_lx_nw/index.html?page=/documentation/oes2/oes_implement_lx_nw/data/manage-ssh.html">Novell NetWare</a>
 <li><a href="http://www.digi.com/products/consolemanagement/digicm.jsp">Digi CM Console Servers</a>
 <li><a href="http://www.alcatel.com/enterprise/en/technologies/technology_ip_networking/security/ssh.html">Alcatel OmniSwitch</a>
@@ -60,13 +55,9 @@ Cisco SN 5400 series storage routers</a>
 <li>All Linux systems, such as Red Hat.
 <li><a href="https://opensource.microsoft.com/?tag=openssh">Microsoft Windows</a>
 </ul>
-<p>
 
+<p>
 Мы уверены, что есть много других систем и продуктов, но мы предпочитаем
 работать с ПО, а не поддерживать список на веб-странице, поэтому, пожалуйста,
 сообщайте нам об отсутствующих в этом списке системах только когда это
 действительно важно.
-
-<p>
-</body>
-</html>
