--- a/openssh/goals.html
+++ b/openssh/goals.html
@@ -1,21 +1,17 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
+
 <title>OpenSSH: Цели проекта</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="the OpenSSH project goals page">
-<meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="canonical" href="https://www.openssh.com/goals.html">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
-</head>
 
-<body bgcolor="#ffffff" text="#000000" link="#23238E">
-
-<h2>
-<a href="index.html">
-<font color="#0000ff"><i>Open</i></font><font color="#000084">SSH</font></a>
-<font color="#e00000">Цели проекта</font>
+<h2 id=OpenBSD>
+<a href="/">
+<i>Open</i><b>SSH</b></a>
+Цели проекта
 </h2>
 <hr>
 
@@ -23,13 +19,12 @@
 Наша задача проста: Так как telnet и rlogin небезопасны,
 все операционные системы должны поставляться с поддержкой
 протокола SSH.
+
 <p>
-
-
 SSH протокол доступен в двух несовместимых вариантах:
 SSH 1 и SSH 2
-<p>
 
+<p>
 Cтарый SSH 1 протокол доступен в двух вариантах: 1.3 и 1.5.
 Поддержка обоих была удалена из OpenSSH начиная с
 <a href="https://www.openbsd.org/openssh/txt/release-7.6">версии 7.6</a>.
@@ -40,8 +35,8 @@ Cтарый SSH 1 протокол доступен в двух варианта
 и <a href="https://man.openbsd.org/blowfish">Blowfish</a> для
 конфиденциальности. Использовался простой CRC для целостности данных,
 который оказался ненадежным.
-<p>
 
+<p>
 Второй вариант SSH - это вторая версия протокола SSH. Вторая версия была
 написана, чтобы, во-первых, избежать проблем с патентом RSA (более не
 существующей проблемы, так как срок действия патента истёк), во-вторых,
@@ -55,18 +50,14 @@ Cтарый SSH 1 протокол доступен в двух варианта
 <a href="https://man.openbsd.org/HMAC">HMAC</a>.
 Протокол SSH 2 поддерживает множество симметричных алгоритмов шифрования,
 а так же множество новых возможностей.
-<p>
 
+<p>
 OpenSSH использует библиотеку <a href="../libressl/index.html">LibreSSL</a>
 для некоторых своих криптографических операций, одним из примеров которой
 является AES-GCM.
-<p>
 
+<p>
 Итак, продолжая работать, разработчики OpenBSD из команды OpenSSH,
 реализовали поддержку протокола SSH 2. Работа была проделана в основном
 Маркусом Фриедлом (Markus Friedl). 4 мая 2000 года поддержка протокола SSH 2
 была завершена и готова к использованию.
-
-<p>
-</body>
-</html>
