--- a/faq/faq5.html
+++ b/faq/faq5.html
@@ -441,27 +441,29 @@ your architecture's kernel <code>tags</code> file in each directory and in
 
 <h3 id="BootConfig">Настройка во время загрузки</h3>
 
-Sometimes when booting your system you might notice that the kernel finds
-your device but maybe at the wrong IRQ.
-Without rebuilding the kernel, you can use OpenBSD's boot time kernel
-configuration, <a href="https://man.openbsd.org/boot_config">boot_config(8)</a>.
+Иногда можно столкнуться с ситуацией, когда ядро обнаруживает устройство,
+но используется неправильное IRQ. В этом случае можно воспользоваться
+<a href="https://man.openbsd.org/boot_config">boot_config(8)</a>, что даcт
+возможность конфигурировать ядро на этапе загрузки, без
+необходимости пересобирать его.
 
 <p>
-However, this will only correct your problem for one time.
-If you reboot, you will have to repeat this procedure.
-So, this is only a temporary fix, and you should correct the problem using
+Тем не менее, этот метод исправит проблему только до следующей перезагрузки.
+После перезагрузки вам снова придется повторять всю процедуру.
+Другими словами, это одноразовое решение. Исправить проблему стоит при помощи
 <a href="https://man.openbsd.org/config">config(8)</a>.
 
 <p>
-To boot into the User Kernel Config, or UKC, use the <code>-c</code> option at
-boot-time.
+Для загрузки в User Kernel Config, или UKC, используйте опцию <code>-c</code>
+при загрузке.
 
 <pre class="cmdbox">
 boot> <b>boot hd0a:/bsd -c</b>
 </pre>
 
-Doing this will bring up a UKC prompt.
-Type <b><code>help</code></b> for a list of available commands.
+После этого появится приглашение UKC.
+Используйте комадну <b><code>help</code></b> чтобы получить список доступных
+команд.
 
 <h3 id="config">Использование config(8) для изменения параметров ядра</h3>
 
